Started infrastructure for Microsoft Table Storage batch updates
